# my-own-tcp-server

./: Cargo.toml
src/: main.rs
src/applications/: mod.rs  model.rs
src/applications/async_mail/: mod.rs  protocol.rs  smtp.rs
src/applications/async_web/: default.rs  http.rs  mod.rs  protocol.rs
src/applications/mail/: protocol.rs  smtp.rs
src/applications/web/: http.rs  protocol.rs
src/core/: async_runtime.rs  bridge.rs  executor.rs  mod.rs  runtime.rs
src/frameworks/mvc/: http_server.rs
src/frameworks/web/: http.rs
